exam-world/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-world-backend
  namespace: exam-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-world-backend
  template:
    metadata:
      labels:
        app: exam-world-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4000"
    spec:
      containers:
      - name: backend
        image: shjeon97/exam-world-backend:latest
        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: upload-volume
          mountPath: /public/upload
      volumes:
      - name: upload-volume
        hostPath:
          path: /main/public/exam-world/upload
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: exam-world-backend
  namespace: exam-world
spec:
  selector:
    app: exam-world-backend
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
